--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ed-notes",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "📝 Un module Node.js permettant de communiquer facilement à l'API Notes d'EcoleDirecte",
   "main": "index.js",
   "type": "module",
@@ -12,7 +12,8 @@
   "keywords": [
     "ecoledirecte",
     "nodejs",
-    "clonedirecte"
+    "clonedirecte",
+    "notes"
   ],
   "dependencies": {
     "axios": "^0.27.2"
